--- a/jisuanqi.html
+++ b/jisuanqi.html
@@ -124,7 +124,7 @@ cal1();
     <body>
     <h1>小狗の计算器</h1>
         <form>
-    <input type="text" id="display">
+    <input type="text" id="display"value="0">
         <br/>
     <input type="button" value="7" class="com number" onclick="get(this.value);">
     <input type="button" value="8" class="com number" onclick="get(this.value);">
