--- a/xiangmu3.html
+++ b/xiangmu3.html
@@ -22,7 +22,7 @@
         float:left;
         background-color:white;
         background-repeat:no-repeat;
-        margin-top:1px;
+        margin-top:100px;
         margin-left:120px;
         text-align:center;
         
@@ -34,7 +34,7 @@
         height:700px;
         background-color:white;
         background-repeat:no-repeat;
-        margin-top:1px;
+        margin-top:100px;
         margin-left:50px;
         text-align:center;
         }
@@ -80,30 +80,30 @@
         #top{
               background-image:url('https://resource.bcgame-face2face.haorenao.cn/slide01.jpg');
         width:100%;
-        height:90%;
+        height:700px;
         background-repeat:no-repeat;
         background-position:top center;
         }
         .second{
         background-image:url('https://resource.bcgame-face2face.haorenao.cn/slide04.jpg');
         width:100%;
-        height:30%;
+        height:200px;
         background-repeat:no-repeat;
         width:100%;
-        margin:750px 0px 0px 0px;
+        margin:850px 0px 0px 0px;
         text-align:center;
         }
         .secondwrite{
         background-color:lightgrey;    
         width:100%;
-        height:30%;
+        height:200px;
         margin:0px;
         text-align:center;
         }
         .last{
         background-color:black;
         width:100%;
-        height:25%;
+        height:200px;
         margin-top:740px;
         
         }
