--- a/xiangmu3.html
+++ b/xiangmu3.html
@@ -109,7 +109,8 @@
         }
         .button1{
         margin-top:40px;
-        margin-left:700px;
+        margin-left:47%;
+        text-align:center;
         }
         </style>
         
@@ -126,8 +127,9 @@
         
         <div id="box1">
         <img src="https://resource.bcgame-face2face.haorenao.cn/pic02.jpg" style="width:100%;height:20em;"><br/><br/>
-        <p style="text-align:center;color:grey">maecenas sapien feugiat ex purus</p><br/>
-        <hr/>
+        <p style="text-align:center;color:grey;margin-bottom:0px;">maecenas sapien feugiat ex purus</p><br/>
+        <p style="margin-top:0px;">        
+            <hr style="width:300px;margin-left:150px;"/>
         <h1 style="text-align:center">Lorem ipsum dolor</h1>
         <p style="text-align:left;padding:3em;color:grey">Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>    
         <button class="liangge">LEARN MORE</button>
@@ -136,7 +138,7 @@
         <div id="box2">
         <img src="https://resource.bcgame-face2face.haorenao.cn/pic03.jpg" style="width:100%;height:20em;"><br/><br/>
         <p style="text-align:center;color:grey">mattis elementum sapien pretium tellus</p><br/>
-        <hr/>
+        <hr style="width:300px;margin-left:150px;"/>
         <h1 style="text-align:center">Vestibulum sit amet</h1>
         <p style="text-align:left;padding:3em;color:grey">Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>    
         <button class="liangge">LEARN MORE</button>
