--- a/qingdan.html
+++ b/qingdan.html
@@ -84,7 +84,7 @@
                 height:50px;
                 font-size:20px;
                 position:absolute;
-            
+                box-sizing:border-box;
                 border:2px solid grey;
                 padding-left:15px;
                 border-radius:20px;
@@ -96,7 +96,7 @@
                 height:50px;
                 font-size:20px;
                 position:absolute;
-            
+                box-sizing:border-box;
                 border:2px solid grey;
                 padding-left:15px;
                 border-radius:20px;
