--- a/MarryChristmas.html
+++ b/MarryChristmas.html
@@ -609,7 +609,7 @@ ul{
             $(function(){
 
 
-
+$(".item:first").addClass("selected")
 function play(preIndex,currentIndex){
     $(".big").eq(preIndex).hide()
     $(".big").eq(currentIndex).show()   
