--- a/new seattle/index.html
+++ b/new seattle/index.html
@@ -422,7 +422,7 @@
                 <div class="row" id="relaRow">
                     <div class="col-lg-3 col-md-3 col-sm-12 col-12 my-2">
                         <div class="card special" id="leftCard">
-                            <img src="https://images.unsplash.com/photo-1467594646906-501fb8291c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1055&q=80" class="card-img-top">
+                            <img src="https://images.unsplash.com/profile-1533826917824-9e43d7baee7f?dpr=1&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff" class="card-img-top">
                             <div class="card-body">
                                 <h3 class="card-title text-center" style="color:#46b0c3">Janic Rand</h3>
                                 <p class="card-text text-center">Executive Director</p>
@@ -436,7 +436,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 col-12 my-2">
                         <div class="card special" id="middleCard">
-                            <img src="https://images.unsplash.com/photo-1525968635328-37e2ce22d2d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" class="card-img-top">
+                            <img src="https://images.unsplash.com/profile-1550805180838-99988a459d3d?dpr=1&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff" class="card-img-top">
                             <div class="card-body">
                                 <h3 class="card-title text-center" style="color:#46b0c3">Rick Deckard</h3>
                                 <p class="card-text text-center">Salesman</p>
@@ -450,7 +450,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 col-12 my-2">
                         <div class="card special" id="rightCard">
-                            <img src="https://images.unsplash.com/uploads/141223919738065be1e88/260bdae7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top">
+                            <img src="https://images.unsplash.com/profile-fb-1497025971-57d420394c4e.jpg?dpr=1&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff" class="card-img-top">
                             <div class="card-body">
                                 <h3 class="card-title text-center" style="color:#46b0c3">Leon Kowalski</h3>
                                 <p class="card-text text-center">Graphic designer
@@ -465,9 +465,9 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 col-12 my-2">
                         <div class="card special" id="fourthCard">
-                            <img src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80" class="card-img-top">
+                            <img src="https://images.unsplash.com/profile-1546554375438-7dc765dd8718?dpr=1&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff" class="card-img-top">
                             <div class="card-body">
-                                <h3 class="card-title text-center" style="color:#46b0c3">Ctianl</h3>
+                                <h3 class="card-title text-center" style="color:#46b0c3"> Chen Ctianl</h3>
                                 <p class="card-text text-center">Graphic designer
                                 </p>
                             </div>
