--- a/fushengji.html
+++ b/fushengji.html
@@ -5,6 +5,7 @@
         <style>
         /*整体部分*/
         body{
+       
             width:100%;
             margin:0;
             font-size:10.6px;
@@ -33,7 +34,8 @@
             position: relative;
         }
         #logo{
-            width:130px;
+            width:13
+            0px;
             position: absolute;
             margin:0;
             top:0;
