--- a/primary3/index.html
+++ b/primary3/index.html
@@ -19,6 +19,7 @@
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script type="text/javascript" src="./static/js/app.js"></script>
 </body>
 
 </html>
